scrollbar fix?

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,3 +1,7 @@
+html {
+  overflow: -moz-scrollbars-vertical;
+  overflow-y: scroll;
+}
 .projectTitle{
   color: #202020;
 }
